--- a/chaotisme.html
+++ b/chaotisme.html
@@ -27,316 +27,316 @@
 <center>
 <br><br><br>
 
-<a href="__CHAOTISME/a_1.jpg">
-	<img src="__CHAOTISME/a_1_thumbnail.jpg">
+<a href="CHAOTISME/a_1.jpg">
+	<img src="CHAOTISME/a_1_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Laureline
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_2.jpg">
-	<img src="__CHAOTISME/a_2_thumbnail.jpg">
+<a href="CHAOTISME/a_2.jpg">
+	<img src="CHAOTISME/a_2_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Jim Phelps
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_3.jpg">
-	<img src="__CHAOTISME/a_3_thumbnail.jpg">
+<a href="CHAOTISME/a_3.jpg">
+	<img src="CHAOTISME/a_3_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Barbarella
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_4.jpg">
-	<img src="__CHAOTISME/a_4_thumbnail.jpg">
+<a href="CHAOTISME/a_4.jpg">
+	<img src="CHAOTISME/a_4_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique d'Adam le père
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_5.jpg">
-	<img src="__CHAOTISME/a_5_thumbnail.jpg">
+<a href="CHAOTISME/a_5.jpg">
+	<img src="CHAOTISME/a_5_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique d'Isabelle
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_6.jpg">
-	<img src="__CHAOTISME/a_6_thumbnail.jpg">
+<a href="CHAOTISME/a_6.jpg">
+	<img src="CHAOTISME/a_6_thumbnail.jpg">
 </a>
 <br><br>
 Le rattrapeur de bus chaotique
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_7.jpg">
-	<img src="__CHAOTISME/a_7_thumbnail.jpg">
+<a href="CHAOTISME/a_7.jpg">
+	<img src="CHAOTISME/a_7_thumbnail.jpg">
 </a>
 <br><br>
 Personnage chaotique de l'homme en débat
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_8.jpg">
-	<img src="__CHAOTISME/a_8_thumbnail.jpg">
+<a href="CHAOTISME/a_8.jpg">
+	<img src="CHAOTISME/a_8_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Gérôme
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_9.jpg">
-	<img src="__CHAOTISME/a_9_thumbnail.jpg">
+<a href="CHAOTISME/a_9.jpg">
+	<img src="CHAOTISME/a_9_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique d'Adrien
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_10.jpg">
-	<img src="__CHAOTISME/a_10_thumbnail.jpg">
+<a href="CHAOTISME/a_10.jpg">
+	<img src="CHAOTISME/a_10_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Jean-Guillaume
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_11.jpg">
-	<img src="__CHAOTISME/a_11_thumbnail.jpg">
+<a href="CHAOTISME/a_11.jpg">
+	<img src="CHAOTISME/a_11_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique d'Anne
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_12.jpg">
-	<img src="__CHAOTISME/a_12_thumbnail.jpg">
+<a href="CHAOTISME/a_12.jpg">
+	<img src="CHAOTISME/a_12_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Gil
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_13.jpg">
-	<img src="__CHAOTISME/a_13_thumbnail.jpg">
+<a href="CHAOTISME/a_13.jpg">
+	<img src="CHAOTISME/a_13_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique d'Éléonore
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_14.jpg">
-	<img src="__CHAOTISME/a_14_thumbnail.jpg">
+<a href="CHAOTISME/a_14.jpg">
+	<img src="CHAOTISME/a_14_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique d'Alida
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_15.jpg">
-	<img src="__CHAOTISME/a_15_thumbnail.jpg">
+<a href="CHAOTISME/a_15.jpg">
+	<img src="CHAOTISME/a_15_thumbnail.jpg">
 </a>
 <br><br>
 Homme au costume chaotique
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_16.jpg">
-	<img src="__CHAOTISME/a_16_thumbnail.jpg">
+<a href="CHAOTISME/a_16.jpg">
+	<img src="CHAOTISME/a_16_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Caroline
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_17.jpg">
-	<img src="__CHAOTISME/a_17_thumbnail.jpg">
+<a href="CHAOTISME/a_17.jpg">
+	<img src="CHAOTISME/a_17_thumbnail.jpg">
 </a>
 <br><br>
 Mère et enfant chaotiques
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_18.jpg">
-	<img src="__CHAOTISME/a_18_thumbnail.jpg">
+<a href="CHAOTISME/a_18.jpg">
+	<img src="CHAOTISME/a_18_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Jacques
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_19.jpg">
-	<img src="__CHAOTISME/a_19_thumbnail.jpg">
+<a href="CHAOTISME/a_19.jpg">
+	<img src="CHAOTISME/a_19_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Romain
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_20.jpg">
-	<img src="__CHAOTISME/a_20_thumbnail.jpg">
+<a href="CHAOTISME/a_20.jpg">
+	<img src="CHAOTISME/a_20_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique d'Héloïse
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_21.jpg">
-	<img src="__CHAOTISME/a_21_thumbnail.jpg">
+<a href="CHAOTISME/a_21.jpg">
+	<img src="CHAOTISME/a_21_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Fabien
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_22.jpg">
-	<img src="__CHAOTISME/a_22_thumbnail.jpg">
+<a href="CHAOTISME/a_22.jpg">
+	<img src="CHAOTISME/a_22_thumbnail.jpg">
 </a>
 <br><br>
 Nu chaotique aux cheveux longs
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_23.jpg">
-	<img src="__CHAOTISME/a_23_thumbnail.jpg">
+<a href="CHAOTISME/a_23.jpg">
+	<img src="CHAOTISME/a_23_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Françoise
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_24.jpg">
-	<img src="__CHAOTISME/a_24_thumbnail.jpg">
+<a href="CHAOTISME/a_24.jpg">
+	<img src="CHAOTISME/a_24_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Sophie
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_25.jpg">
-	<img src="__CHAOTISME/a_25_thumbnail.jpg">
+<a href="CHAOTISME/a_25.jpg">
+	<img src="CHAOTISME/a_25_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Jean-Francois
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_26.jpg">
-	<img src="__CHAOTISME/a_26_thumbnail.jpg">
+<a href="CHAOTISME/a_26.jpg">
+	<img src="CHAOTISME/a_26_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Charles
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_27.jpg">
-	<img src="__CHAOTISME/a_27_thumbnail.jpg">
+<a href="CHAOTISME/a_27.jpg">
+	<img src="CHAOTISME/a_27_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Hans
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_28.jpg">
-	<img src="__CHAOTISME/a_28_thumbnail.jpg">
+<a href="CHAOTISME/a_28.jpg">
+	<img src="CHAOTISME/a_28_thumbnail.jpg">
 </a>
 <br><br>
 Le philosophe chaotique
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_29.jpg">
-	<img src="__CHAOTISME/a_29_thumbnail.jpg">
+<a href="CHAOTISME/a_29.jpg">
+	<img src="CHAOTISME/a_29_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de la fille du bus
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_30.jpg">
-	<img src="__CHAOTISME/a_30_thumbnail.jpg">
+<a href="CHAOTISME/a_30.jpg">
+	<img src="CHAOTISME/a_30_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Magalie
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_31.jpg">
-	<img src="__CHAOTISME/a_31_thumbnail.jpg">
+<a href="CHAOTISME/a_31.jpg">
+	<img src="CHAOTISME/a_31_thumbnail.jpg">
 </a>
 <br><br>
 Nu chaotique
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_32.jpg">
-	<img src="__CHAOTISME/a_32_thumbnail.jpg">
+<a href="CHAOTISME/a_32.jpg">
+	<img src="CHAOTISME/a_32_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de la Belle Hélène
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_33.jpg">
-	<img src="__CHAOTISME/a_33_thumbnail.jpg">
+<a href="CHAOTISME/a_33.jpg">
+	<img src="CHAOTISME/a_33_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Kristin Scott Thomas
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_34.jpg">
-	<img src="__CHAOTISME/a_34_thumbnail.jpg">
+<a href="CHAOTISME/a_34.jpg">
+	<img src="CHAOTISME/a_34_thumbnail.jpg">
 </a>
 <br><br>
 Le penseur chaotique
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_35.jpg">
-	<img src="__CHAOTISME/a_35_thumbnail.jpg">
+<a href="CHAOTISME/a_35.jpg">
+	<img src="CHAOTISME/a_35_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Thomas
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_36.jpg">
-	<img src="__CHAOTISME/a_36_thumbnail.jpg">
+<a href="CHAOTISME/a_36.jpg">
+	<img src="CHAOTISME/a_36_thumbnail.jpg">
 </a>
 <br><br>
 Stress chaotique
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_37.jpg">
-	<img src="__CHAOTISME/a_37_thumbnail.jpg">
+<a href="CHAOTISME/a_37.jpg">
+	<img src="CHAOTISME/a_37_thumbnail.jpg">
 </a>
 <br><br>
 Couple chaotique
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_38.jpg">
-	<img src="__CHAOTISME/a_38_thumbnail.jpg">
+<a href="CHAOTISME/a_38.jpg">
+	<img src="CHAOTISME/a_38_thumbnail.jpg">
 </a>
 <br><br>
 Personnages chaotiques en soirée
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_39.jpg">
-	<img src="__CHAOTISME/a_39_thumbnail.jpg">
+<a href="CHAOTISME/a_39.jpg">
+	<img src="CHAOTISME/a_39_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Lupin
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_40.jpg">
-	<img src="__CHAOTISME/a_40_thumbnail.jpg">
+<a href="CHAOTISME/a_40.jpg">
+	<img src="CHAOTISME/a_40_thumbnail.jpg">
 </a>
 <br><br>
 Homme chaotique regardant la lune
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_41.jpg">
-	<img src="__CHAOTISME/a_41_thumbnail.jpg">
+<a href="CHAOTISME/a_41.jpg">
+	<img src="CHAOTISME/a_41_thumbnail.jpg">
 </a>
 <br><br>
 Homme et femme au café chaotiques
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_42.jpg">
-	<img src="__CHAOTISME/a_42_thumbnail.jpg">
+<a href="CHAOTISME/a_42.jpg">
+	<img src="CHAOTISME/a_42_thumbnail.jpg">
 </a>
 <br><br>
 Homme chaotique au chapeau regardant la lune
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_43.jpg">
-	<img src="__CHAOTISME/a_43_thumbnail.jpg">
+<a href="CHAOTISME/a_43.jpg">
+	<img src="CHAOTISME/a_43_thumbnail.jpg">
 </a>
 <br><br>
 Spirou chaotique
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_44.jpg">
-	<img src="__CHAOTISME/a_44_thumbnail.jpg">
+<a href="CHAOTISME/a_44.jpg">
+	<img src="CHAOTISME/a_44_thumbnail.jpg">
 </a>
 <br><br>
 Asterix chaotique
 <br><br><br><br><br>
 
-<a href="__CHAOTISME/a_45.jpg">
-	<img src="__CHAOTISME/a_45_thumbnail.jpg">
+<a href="CHAOTISME/a_45.jpg">
+	<img src="CHAOTISME/a_45_thumbnail.jpg">
 </a>
 <br><br>
 Portrait chaotique de Marie-Louise
