--- a/cri_primal.html
+++ b/cri_primal.html
@@ -27,62 +27,62 @@
 <center>
 <br><br><br>
 
-<a href="__CRI_PRIMAL/cr_1.jpg">
-	<img src="__CRI_PRIMAL/cr_1_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_1.jpg">
+	<img src="CRI_PRIMAL/cr_1_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CRI_PRIMAL/cr_2.jpg">
-	<img src="__CRI_PRIMAL/cr_2_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_2.jpg">
+	<img src="CRI_PRIMAL/cr_2_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CRI_PRIMAL/cr_3.jpg">
-	<img src="__CRI_PRIMAL/cr_3_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_3.jpg">
+	<img src="CRI_PRIMAL/cr_3_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CRI_PRIMAL/cr_4.jpg">
-	<img src="__CRI_PRIMAL/cr_4_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_4.jpg">
+	<img src="CRI_PRIMAL/cr_4_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CRI_PRIMAL/cr_5.jpg">
-	<img src="__CRI_PRIMAL/cr_5_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_5.jpg">
+	<img src="CRI_PRIMAL/cr_5_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CRI_PRIMAL/cr_6.jpg">
-	<img src="__CRI_PRIMAL/cr_6_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_6.jpg">
+	<img src="CRI_PRIMAL/cr_6_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CRI_PRIMAL/cr_7.jpg">
-	<img src="__CRI_PRIMAL/cr_7_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_7.jpg">
+	<img src="CRI_PRIMAL/cr_7_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CRI_PRIMAL/cr_8.jpg">
-	<img src="__CRI_PRIMAL/cr_8_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_8.jpg">
+	<img src="CRI_PRIMAL/cr_8_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CRI_PRIMAL/cr_9.jpg">
-	<img src="__CRI_PRIMAL/cr_9_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_9.jpg">
+	<img src="CRI_PRIMAL/cr_9_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CRI_PRIMAL/cr_10.jpg">
-	<img src="__CRI_PRIMAL/cr_10_thumbnail.jpg">
+<a href="CRI_PRIMAL/cr_10.jpg">
+	<img src="CRI_PRIMAL/cr_10_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
