--- a/duel.html
+++ b/duel.html
@@ -27,20 +27,20 @@
 <center> 
 <br><br><br>
 
-<a href="__DUEL/d_1.jpg">
-	<img src="__DUEL/d_1_thumbnail.jpg">
+<a href="DUEL/d_1.jpg">
+	<img src="DUEL/d_1_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__DUEL/d_2.jpg">
-	<img src="__DUEL/d_2_thumbnail.jpg">
+<a href="DUEL/d_2.jpg">
+	<img src="DUEL/d_2_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__DUEL/d_3.jpg">
-	<img src="__DUEL/d_3_thumbnail.jpg">
+<a href="DUEL/d_3.jpg">
+	<img src="DUEL/d_3_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
