--- a/jarnvag.html
+++ b/jarnvag.html
@@ -27,32 +27,32 @@
 <center>
 <br><br><br>
 
-<a href="__JARNVAG/j_1.jpg">
-	<img src="__JARNVAG/j_1_thumbnail.jpg">
+<a href="JARNVAG/j_1.jpg">
+	<img src="JARNVAG/j_1_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__JARNVAG/j_2.jpg">
-	<img src="__JARNVAG/j_2_thumbnail.jpg">
+<a href="JARNVAG/j_2.jpg">
+	<img src="JARNVAG/j_2_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__JARNVAG/j_3.jpg">
-	<img src="__JARNVAG/j_3_thumbnail.jpg">
+<a href="JARNVAG/j_3.jpg">
+	<img src="JARNVAG/j_3_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__JARNVAG/j_4.jpg">
-	<img src="__JARNVAG/j_4_thumbnail.jpg">
+<a href="JARNVAG/j_4.jpg">
+	<img src="JARNVAG/j_4_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__JARNVAG/j_5.jpg">
-	<img src="__JARNVAG/j_5_thumbnail.jpg">
+<a href="JARNVAG/j_5.jpg">
+	<img src="JARNVAG/j_5_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
