--- a/metabede.html
+++ b/metabede.html
@@ -27,68 +27,68 @@
 <center>
 <br><br><br>
  
-<a href="__META_BD/m_1.jpg">
-	<img src="__META_BD/m_1_thumbnail.jpg"></a>
+<a href="META_BD/m_1.jpg">
+	<img src="META_BD/m_1_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_2.jpg">
-	<img src="__META_BD/m_2_thumbnail.jpg"></a>
+<a href="META_BD/m_2.jpg">
+	<img src="META_BD/m_2_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_3.jpg">
-	<img src="__META_BD/m_3_thumbnail.jpg"></a>
+<a href="META_BD/m_3.jpg">
+	<img src="META_BD/m_3_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_4.jpg">
-	<img src="__META_BD/m_4_thumbnail.jpg"></a>
+<a href="META_BD/m_4.jpg">
+	<img src="META_BD/m_4_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_5.jpg">
-	<img src="__META_BD/m_5_thumbnail.jpg"></a>
+<a href="META_BD/m_5.jpg">
+	<img src="META_BD/m_5_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_6.jpg">
-	<img src="__META_BD/m_6_thumbnail.jpg"></a>
+<a href="META_BD/m_6.jpg">
+	<img src="META_BD/m_6_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_7.jpg">
-	<img src="__META_BD/m_7_thumbnail.jpg"></a>
+<a href="META_BD/m_7.jpg">
+	<img src="META_BD/m_7_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_8.jpg">
-	<img src="__META_BD/m_8_thumbnail.jpg"></a>
+<a href="META_BD/m_8.jpg">
+	<img src="META_BD/m_8_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_9.jpg">
-	<img src="__META_BD/m_9_thumbnail.jpg"></a>
+<a href="META_BD/m_9.jpg">
+	<img src="META_BD/m_9_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_10.jpg">
-	<img src="__META_BD/m_10_thumbnail.jpg"></a>
+<a href="META_BD/m_10.jpg">
+	<img src="META_BD/m_10_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_11.jpg">
-	<img src="__META_BD/m_11_thumbnail.jpg"></a>
+<a href="META_BD/m_11.jpg">
+	<img src="META_BD/m_11_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_12.jpg">
-	<img src="__META_BD/m_12_thumbnail.jpg"></a>
+<a href="META_BD/m_12.jpg">
+	<img src="META_BD/m_12_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__META_BD/m_13.jpg">
-	<img src="__META_BD/m_13_thumbnail.jpg"></a>
+<a href="META_BD/m_13.jpg">
+	<img src="META_BD/m_13_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 </center>
