--- a/qqs_peintures.html
+++ b/qqs_peintures.html
@@ -28,90 +28,90 @@
 <br><br><br>
 
 
-<a href="__QQS_PEINTURES/qp_1.jpg">
-	<img src="__QQS_PEINTURES/qp_1_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_1.jpg">
+	<img src="QQS_PEINTURES/qp_1_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_2.jpg">
-	<img src="__QQS_PEINTURES/qp_2_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_2.jpg">
+	<img src="QQS_PEINTURES/qp_2_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
-<a href="__QQS_PEINTURES/qp_3.jpg">
-	<img src="__QQS_PEINTURES/qp_3_thumbnail.jpg">
-</a>
-<br><br>
-<br><br><br><br><br>
-
-<a href="__QQS_PEINTURES/qp_4.jpg">
-	<img src="__QQS_PEINTURES/qp_4_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_3.jpg">
+	<img src="QQS_PEINTURES/qp_3_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_5.jpg">
-	<img src="__QQS_PEINTURES/qp_5_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_4.jpg">
+	<img src="QQS_PEINTURES/qp_4_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_6.jpg">
-	<img src="__QQS_PEINTURES/qp_6_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_5.jpg">
+	<img src="QQS_PEINTURES/qp_5_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_7.jpg">
-	<img src="__QQS_PEINTURES/qp_7_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_6.jpg">
+	<img src="QQS_PEINTURES/qp_6_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_8.jpg">
-	<img src="__QQS_PEINTURES/qp_8_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_7.jpg">
+	<img src="QQS_PEINTURES/qp_7_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_9.jpg">
-	<img src="__QQS_PEINTURES/qp_9_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_8.jpg">
+	<img src="QQS_PEINTURES/qp_8_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_10.jpg">
-	<img src="__QQS_PEINTURES/qp_10_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_9.jpg">
+	<img src="QQS_PEINTURES/qp_9_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_11.jpg">
-	<img src="__QQS_PEINTURES/qp_11_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_10.jpg">
+	<img src="QQS_PEINTURES/qp_10_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_12.jpg">
-	<img src="__QQS_PEINTURES/qp_12_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_11.jpg">
+	<img src="QQS_PEINTURES/qp_11_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_13.jpg">
-	<img src="__QQS_PEINTURES/qp_13_thumbnail.jpg">
-</a>
-<br><br>
-<br><br><br><br><br>
-<a href="__QQS_PEINTURES/qp_14.jpg">
-	<img src="__QQS_PEINTURES/qp_14_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_12.jpg">
+	<img src="QQS_PEINTURES/qp_12_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PEINTURES/qp_15.jpg">
-	<img src="__QQS_PEINTURES/qp_15_thumbnail.jpg">
+<a href="QQS_PEINTURES/qp_13.jpg">
+	<img src="QQS_PEINTURES/qp_13_thumbnail.jpg">
+</a>
+<br><br>
+<br><br><br><br><br>
+<a href="QQS_PEINTURES/qp_14.jpg">
+	<img src="QQS_PEINTURES/qp_14_thumbnail.jpg">
+</a>
+<br><br>
+<br><br><br><br><br>
+
+<a href="QQS_PEINTURES/qp_15.jpg">
+	<img src="QQS_PEINTURES/qp_15_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
