--- a/torsion.html
+++ b/torsion.html
@@ -27,168 +27,168 @@
 <center> 
 <br><br><br> 
  
-<a href="__TORSION/t_1.jpg">
-	<img src="__TORSION/t_1_thumbnail.jpg"></a>
+<a href="TORSION/t_1.jpg">
+	<img src="TORSION/t_1_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_2.jpg">
-	<img src="__TORSION/t_2_thumbnail.jpg"></a>
+<a href="TORSION/t_2.jpg">
+	<img src="TORSION/t_2_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_3.jpg">
-	<img src="__TORSION/t_3_thumbnail.jpg"></a>
+<a href="TORSION/t_3.jpg">
+	<img src="TORSION/t_3_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_4.jpg">
-	<img src="__TORSION/t_4_thumbnail.jpg"></a>
+<a href="TORSION/t_4.jpg">
+	<img src="TORSION/t_4_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_5.jpg">
-	<img src="__TORSION/t_5_thumbnail.jpg"></a>
+<a href="TORSION/t_5.jpg">
+	<img src="TORSION/t_5_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_6.jpg">
-	<img src="__TORSION/t_6_thumbnail.jpg"></a>
+<a href="TORSION/t_6.jpg">
+	<img src="TORSION/t_6_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_7.jpg">
-	<img src="__TORSION/t_7_thumbnail.jpg"></a>
+<a href="TORSION/t_7.jpg">
+	<img src="TORSION/t_7_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_8.jpg">
-	<img src="__TORSION/t_8_thumbnail.jpg"></a>
+<a href="TORSION/t_8.jpg">
+	<img src="TORSION/t_8_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_9.jpg">
-	<img src="__TORSION/t_9_thumbnail.jpg"></a>
+<a href="TORSION/t_9.jpg">
+	<img src="TORSION/t_9_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_10.jpg">
-	<img src="__TORSION/t_10_thumbnail.jpg"></a>
+<a href="TORSION/t_10.jpg">
+	<img src="TORSION/t_10_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_11.jpg">
-	<img src="__TORSION/t_11_thumbnail.jpg"></a>
+<a href="TORSION/t_11.jpg">
+	<img src="TORSION/t_11_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_12.jpg">
-	<img src="__TORSION/t_12_thumbnail.jpg"></a>
+<a href="TORSION/t_12.jpg">
+	<img src="TORSION/t_12_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_13.jpg">
-	<img src="__TORSION/t_13_thumbnail.jpg"></a>
+<a href="TORSION/t_13.jpg">
+	<img src="TORSION/t_13_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_14.jpg">
-	<img src="__TORSION/t_14_thumbnail.jpg"></a>
+<a href="TORSION/t_14.jpg">
+	<img src="TORSION/t_14_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_15.jpg">
-	<img src="__TORSION/t_15_thumbnail.jpg"></a>
+<a href="TORSION/t_15.jpg">
+	<img src="TORSION/t_15_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_16.jpg">
-	<img src="__TORSION/t_16_thumbnail.jpg"></a>
+<a href="TORSION/t_16.jpg">
+	<img src="TORSION/t_16_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_17.jpg">
-	<img src="__TORSION/t_17_thumbnail.jpg"></a>
+<a href="TORSION/t_17.jpg">
+	<img src="TORSION/t_17_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_18.jpg">
-	<img src="__TORSION/t_18_thumbnail.jpg"></a>
+<a href="TORSION/t_18.jpg">
+	<img src="TORSION/t_18_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_19.jpg">
-	<img src="__TORSION/t_19_thumbnail.jpg"></a>
+<a href="TORSION/t_19.jpg">
+	<img src="TORSION/t_19_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_20.jpg">
-	<img src="__TORSION/t_20_thumbnail.jpg"></a>
+<a href="TORSION/t_20.jpg">
+	<img src="TORSION/t_20_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_21.jpg">
-	<img src="__TORSION/t_21_thumbnail.jpg"></a>
+<a href="TORSION/t_21.jpg">
+	<img src="TORSION/t_21_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_22.jpg">
-	<img src="__TORSION/t_22_thumbnail.jpg"></a>
+<a href="TORSION/t_22.jpg">
+	<img src="TORSION/t_22_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_23.jpg">
-	<img src="__TORSION/t_23_thumbnail.jpg"></a>
+<a href="TORSION/t_23.jpg">
+	<img src="TORSION/t_23_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_24.jpg">
-	<img src="__TORSION/t_24_thumbnail.jpg"></a>
+<a href="TORSION/t_24.jpg">
+	<img src="TORSION/t_24_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_25.jpg">
-	<img src="__TORSION/t_25_thumbnail.jpg"></a>
+<a href="TORSION/t_25.jpg">
+	<img src="TORSION/t_25_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_26.jpg">
-	<img src="__TORSION/t_26_thumbnail.jpg"></a>
+<a href="TORSION/t_26.jpg">
+	<img src="TORSION/t_26_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_27.jpg">
-	<img src="__TORSION/t_27_thumbnail.jpg"></a>
+<a href="TORSION/t_27.jpg">
+	<img src="TORSION/t_27_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_28.jpg">
-	<img src="__TORSION/t_28_thumbnail.jpg"></a>
+<a href="TORSION/t_28.jpg">
+	<img src="TORSION/t_28_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_29.jpg">
-	<img src="__TORSION/t_29_thumbnail.jpg"></a>
+<a href="TORSION/t_29.jpg">
+	<img src="TORSION/t_29_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_30.jpg">
-	<img src="__TORSION/t_30_thumbnail.jpg"></a>
+<a href="TORSION/t_30.jpg">
+	<img src="TORSION/t_30_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_31.jpg">
-	<img src="__TORSION/t_31_thumbnail.jpg"></a>
+<a href="TORSION/t_31.jpg">
+	<img src="TORSION/t_31_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_32.jpg">
-	<img src="__TORSION/t_32_thumbnail.jpg"></a>
+<a href="TORSION/t_32.jpg">
+	<img src="TORSION/t_32_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__TORSION/t_33.jpg">
-	<img src="__TORSION/t_33_thumbnail.jpg"></a>
+<a href="TORSION/t_33.jpg">
+	<img src="TORSION/t_33_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
